# monarbor

./: .gitignore  README.md  pyproject.toml
monarbor/: __init__.py  cli.py  config.py  git_ops.py
tests/: test_clone_into_existing.py  test_clone_recursive.py  test_nested_discovery.py  test_sync_remote.py
